2005-07-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/rrddir2xml.in: New utility for generating XML from a directory
	with RRD files

2005-06-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: [1.0.1pl2] - fixed bug
	with deleting unreachable targets

2005-06-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: 1.0.1 Patchlevel 1

	* bin/action_snmpv1trap.in, bin/action_snmptrap.in:
	added torrusMonitorDesc 

	* sup/mibs/TORRUS-MIB.txt: new OID: torrusMonitorDesc

	* NEWS: release 1.0.1

	* perllib/Torrus/SiteConfig.pm (verify):
	$Torrus::Renderer::stylingProfileOverlay is now an absolute file name

	* xmlconfig/vendor/cisco.ios.docsis.xml:
	Added Registered modems graph. WARNING: RRD structure changed

	* bin/devdiscover.in: New option: --fallback

	* perllib/Torrus/Collector/SNMP.pm (initTargetAttributes):
	Target is deleted when SNMP map expansion fails

2005-06-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Monitor.pm: sleep --delay minutes also after
	recompiling

	* configs/torrus-config.pl:
	$Torrus::Collector::SNMP::unreachableTimeout increased to 1900
	$Torrus::Collector::SNMP::unreachableRetryDelay increased to 600

	* perllib/Torrus/Collector/SNMP.pm:
	Better handling of SNMP errors. Delete all tokens for a host
	if it is unreachable.

2005-06-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 1.0.0

	* bin/monitor.in: New option: --delay

	* init.d/torrus.in: The init script reads its options from
	initscript.conf and initscript.siteconf

2005-06-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/devdiscover.in: new CLI option: --forcebundle

	* perllib/Torrus/DevDiscover.pm: monitor-period and monitor-timeoffset
	are now copied from DDX

	* bin/action_snmpv1trap.in, bin/action_snmptrap.in,
	sup/mibs/TORRUS-MIB.txt: Added new SNMP variable: severity
